a correction by friends
Alignment and content issues

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 
 		<header class="major container medium">
 			<h2>I design products and systems
-				<br />
+
 				that solve problems
-				<br />
+
 				with elegance and aesthetic
 			</h2>
 
 			<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#exampleModalCenter"
 				data-backdrop="true" style="margin-top: 30px">
-				Read More
+				Personal Statement
 			</button>
 
 		</header>
@@ -50,7 +50,7 @@
 		<div class="box alt container">
 
 			<section class="feature left">
-				<a href="https://github.com/lindawn?tab=repositories" class="image icon solid fa-mobile-alt"><img
+				<a href="https://github.com/lindawn?tab=repositories" class="image icon solid fa-mobile-alt "><img
 						src="images/lofi-beats-ver2.jpg" alt="" style="width: 50%" /></a>
 				<div class="content">
 					<h3>Software Development</h3>
@@ -60,8 +60,6 @@
 					</p>
 				</div>
 			</section>
-
-
 
 
 			<section class="feature right">
@@ -75,8 +73,8 @@
 				<div class="content">
 					<h3>Creative Work</h3>
 					<p>I produce creative content when crafting the online images of my clients. To complement that, I
-						also embark on some
-						artistic projects of my own. These include exploring how to edit existing photographs,
+						also embark on some artistic projects of my own. These include exploring how to edit existing
+						photographs,
 						photobashing, designing logos and taking photos.
 						<br />
 						Here is some of my work.</p>
@@ -90,19 +88,19 @@
 						<img src="images/gallery/freeze.jpg" />
 						<img src="images/gallery/wounds-home.jpg" />
 
+						<img src="images/gallery/joaquim-tech.jpg" />
+						<img src="images/gallery/cares-home.jpg" />
 
-						<img src="images/gallery/cares-home.jpg" />
-						<img src="images/gallery/xy.jpg" />
-						<img src="images/gallery/cares-home.jpg" />
+
 						<img src="images/gallery/chingsoo.jpg" />
 
 						<img src="images/gallery/shinsuke.jpg" />
 						<img src="images/gallery/yuki.jpg" />
-						<img src="images/gallery/joaquim-tech.jpg" />
+						<img src="images/gallery/project-shan.jpg" />
 						<img src="images/gallery/gic-logo.jpg" />
 						<img src="images/gallery/jenny.jpg" />
 						<img src="images/gallery/group.jpg" />
-						<img src="images/gallery/project-shan.jpg" />
+
 
 					</section>
 				</div>
@@ -382,16 +380,18 @@
 						<h2>Tetsuyu Healthcare </h2>
 						<h5>Software Engineering Intern, Summer 2019</h5>
 						<p>
-							I developed the company website using ReactJS for a professional public image, and
-							coordinated and
-							executing all photo and video shoots. I also edited the all videos and photos using
-							Lightworks and GIMP respectively,
-							to align with the company's image. I also played the role of a technical writer, and
+							I developed the company website using ReactJS for a professional public image. This included
+							coordinating and executing all video and photo shoots, followed by editing with
+							Lightworks and GIMP respectively.
+							<br />
+
+							I also played the role of a technical writer, and
 							facilitated technical communication through product documentation to better align
 							product vision to development milestones.
 
-							We also had a collaborative project with A*STAR, on which I was in charge of the other
-							interns at my company. We categorised tissues in wound images using Azimut (by A*Star), to
+							<br />
+							We had a collaborative project with A*STAR, on which I was in charge of the other
+							interns at my company. Using Azimut (by A*Star), we classified tissues in wound images to
 							pre-process data for machine learning.
 							To improve efficiency, I implemented efficient file management system to enhance efficiency
 							by 3-fold using Excel
@@ -427,10 +427,11 @@
 						<h2>Tom Dick and Hillary’s (TDH) </h2>
 						<h5>Service Staff, Summer 2019</h5>
 						<p>
-							I worked as a service staff at a whiskey bar, where networked and communicated with top
-							professionals from various fields. My experience at TDH taught me invaluable conversational
-							skills, as they expected the best hosting service from its staff members. As many regualrs
-							at the bar are professionals at the top of their field, I also gained valuable insights into
+							The best networking and conversational skills were expected of employees at TDH, as we were
+							expected to keep guests engaged and feeling welcome for the entire duration of their stay.
+							<br />
+							As many regularrs at the bar are professionals at the top of their field, I also gained
+							valuable insights into
 							other industries.
 						</p>
 					</div>
@@ -448,12 +449,14 @@
 						<p>
 							Alfred is my Makerthon team's RasPi robot, designed to help children with limited mobility
 							move things around their desks.
-							As the only programmer in my team, I integrated computer vision, voice controls, and switch
+							As the only computing student in my team, I integrated computer vision, voice controls, and
+							switch
 							controls into a Raspberry Pi robot using Python Libraries (RpiGPIO, numpy, pyaudio, OpenCV
 							etc) to empower children with limited mobility.
 							<br />
-							While our project was not ready by the presentation deadline, I learnt a lot from the
-							process, including design thinking, and the assembly of hardware components.
+							This process was extremely rewarding, as I learnt about
+							design thinking and assembly of hardware components from my team mates of design and
+							engineering faculties.
 							We are looking to continue working on this project during the term break.
 						</p>
 					</div>
@@ -475,7 +478,7 @@
 							in the Sarychat Ertash Nature Reserve, Kyrgyzstan, and donated the rest of the proceeds to
 							the Snow Leopard Trust.
 							<br />
-							Throughout the year, we organised bi-weekly events, that alternated between fund raisers and
+							Throughout the year, we organised bi-weekly events, that included between fund raisers and
 							educational and crafting workshops. The themes were centered around the snow leopard, and
 							the other college animals.
 							I also headed final exhibition for the annual Rector’s Shield event, to create a shadow art
@@ -490,7 +493,7 @@
 
 					<div class="col-8">
 						<h2>BreakiNUS, The Official NUS Bboy Club</h2>
-						<h5>Vice President, August 2017 - May 2018</h5>
+						<h5>Vice President, Jan 2018 - Dec 2018</h5>
 						<p>
 							As the Vice-President of the club, I organised Singapore’s largest annual inter-university
 							dance jam in the genre, facilitating the exchange of technical expertise between clubs.
@@ -523,7 +526,9 @@
 
 			<div class="row" style="margin: 2rem">
 				<ul class="actions special">
-					<a href="files/Resume_Dawn_Lin.pdf"><li><input type="submit" value="Download My CV" /></li></a>
+					<a href="files/Resume_Dawn_Lin.pdf">
+						<li><input type="submit" value="Download My CV" /></li>
+					</a>
 				</ul>
 			</div>
 		</section>
