moved school work

--- a/index.html
+++ b/index.html
@@ -361,6 +361,51 @@
 				</div>
 
 			</section>
+
+			<section>
+				<header>
+					<h3>Prototyping Tools</h3>
+				</header>
+
+				<div class="table-wrapper">
+					<table class="default">
+
+						<tbody>
+							<tr>
+
+							</tr>
+							<tr>
+								<td>Figma</td>
+								<td><i class="fas fa-circle"></i>
+									<i class="fas fa-circle"></i>
+									<i class="far fa-circle"></i>
+									<i class="far fa-circle"></i>
+								</td>
+
+							</tr>
+							<tr>
+								<td>InVision</td>
+								<td><i class="fas fa-circle"></i>
+									<i class="fas fa-circle"></i>
+									<i class="far fa-circle"></i>
+									<i class="far fa-circle"></i>
+								</td>
+							</tr>
+
+							<tr>
+								<td>Adobe XD</td>
+								<td><i class="fas fa-circle"></i>
+									<i class="fas fa-circle"></i>
+									<i class="far fa-circle"></i>
+									<i class="far fa-circle"></i>
+								</td>
+							</tr>
+
+					</table>
+				</div>
+
+			</section>
+
 		</div>
 
 
@@ -464,6 +509,35 @@
 
 
 
+			</div>
+		</section>
+
+
+		<section class="major container">
+			<div style="margin-bottom: 2rem">
+
+				<h1>University Contributions</h1>
+			</div>
+
+			<div class="projects">
+				<div class="row">
+					<div class="col-4 ">
+						<img class="img-fluid " src="images/breakinus-logo.jpg" style="width: 70%; margin: 1rem" />
+					</div>
+
+					<div class="col-8">
+						<h2>BreakiNUS, The Official NUS Bboy Club</h2>
+						<h5>Vice President, Jan 2018 - Dec 2018</h5>
+						<p>
+							As the Vice-President of the club, I organised Singapore’s largest annual
+							inter-university
+							dance jam in the genre, facilitating the exchange of technical expertise between clubs.
+							I also regularly managed club logistics and venues for rehearsals and practice, and
+							assisted
+							the president with building internal and external club relations.
+					</div>
+				</div>
+
 				<div class="row">
 					<div class="col-4 ">
 						<img class="img-fluid" src="images/shan.jpg" style="width: 70%; margin: 1rem" />
@@ -488,21 +562,6 @@
 
 				<div class="row">
 					<div class="col-4 ">
-						<img class="img-fluid " src="images/breakinus-logo.jpg" style="width: 70%; margin: 1rem" />
-					</div>
-
-					<div class="col-8">
-						<h2>BreakiNUS, The Official NUS Bboy Club</h2>
-						<h5>Vice President, Jan 2018 - Dec 2018</h5>
-						<p>
-							As the Vice-President of the club, I organised Singapore’s largest annual inter-university
-							dance jam in the genre, facilitating the exchange of technical expertise between clubs.
-							I also regularly managed club logistics and venues for rehearsals and practice, and assisted
-							the president with building internal and external club relations.
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-4 ">
 						<img class="img-fluid" src="images/tembusu-logo.jpeg" style="width: 70%; margin: 1rem" />
 					</div>
 
@@ -510,17 +569,21 @@
 						<h2>House Committee, Tembusu College</h2>
 						<h5>Treasurer and Member, August 2017 - May 2018</h5>
 						<p>
-							As the treasurer of the committee, I verified and distributed funds and reimbursements for
+							As the treasurer of the committee, I verified and distributed funds and reimbursements
+							for
 							all house events.
 							I also planned and executed fortnightly house activities of various calibers, with a
-							committee of members of largely varying working styles. Our events included a huge variety
-							of natures and number of participants. We often also organised events with other houses, and
+							committee of members of largely varying working styles. Our events included a huge
+							variety
+							of natures and number of participants. We often also organised events with other houses,
+							and
 							helped with college-level events.
 					</div>
 				</div>
-
 			</div>
+
 		</section>
+
 
 		<section class="major container">
 
@@ -560,7 +623,7 @@
 
 							</tr>
 							<tr>
-								<td>Tembusu College </td>
+								<td>Tembusu College (University Towen College Programme) </td>
 								<td>
 									2017 - 2019
 								</td>
