--- a/index.html
+++ b/index.html
@@ -425,12 +425,12 @@
 						<h2>Tetsuyu Healthcare </h2>
 						<h5>Software Engineering Intern, Summer 2019</h5>
 						<p>
-							I developed the company website using ReactJS for a professional public image. This included
+							I developed the company website using <b>ReactJS</b> for a professional public image. This included
 							coordinating and executing all video and photo shoots, followed by editing with
 							Lightworks and GIMP respectively.
 							<br />
 
-							I also played the role of a technical writer, and
+							I also played the role of a <b>technical writer</b>, and
 							facilitated technical communication through product documentation to better align
 							product vision to development milestones.
 
@@ -440,6 +440,27 @@
 							pre-process data for machine learning.
 							To improve efficiency, I implemented efficient file management system to enhance efficiency
 							by 3-fold using Excel
+						</p>
+					</div>
+				</div>
+
+
+				<div class="row">
+					<div class="col-4 ">
+						<img class="img-fluid" src="images/liqcrative.png" />
+					</div>
+
+					<div class="col-8">
+						<h2>Liqcrative</h2>
+						<h5>Software Engineering Project, Jan 2019 - May 2019</h5>
+						<p>
+							
+							I led a team of 4 in a fullstack web and mobile application development project using <b>Java EE SDK and Angular</b>, for a module on enterprise systems interface design and development.
+							LiqCrative was an alcohol subscription box service with different tiers, created with the intention of lowering costs for budding mixologists, 
+							while sending them unique craft liquors in sample-sized volumes. 
+							The backend of the software was built in Java EE, while the front end was built with Java's PrimeFaces (Admin panel), and Angular (customer-facing application) with RESTful web services.
+							
+
 						</p>
 					</div>
 				</div>
