--- a/index.html
+++ b/index.html
@@ -444,7 +444,24 @@
 					</div>
 				</div>
 
+				<div class="row">
+					<div class="col-4 ">
+						<img class="img-fluid" src="images/droid.png" />
+					</div>
 
+					<div class="col-8">
+						<h2>Health App</h2>
+						<h5>Android Development, August 2019 - December 2019</h5>
+						<p>
+							
+							As part of a module project, I developed an Android application that helped to automatically adjust prices of food based on 
+							the nutritional intake of NUS students. It made use of QR Codes to read json files and extract and process data within the application, 
+							to determine customised prices for each student, to encourage a balanced diet. I also made use of the MPAndroidChart library to track the nutritional Information 
+							of the students to give them feedback on their nutritional intake. 
+
+						</p>
+					</div>
+				</div>
 				<div class="row">
 					<div class="col-4 ">
 						<img class="img-fluid" src="images/liqcrative.png" />
