--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
 
 					<div class="col-8">
 						<h2>NUS Makerthon 2019 - Alfred</h2>
-						<h5>Service Staff, Dec 2018 - Jan 2019</h5>
+						<h5>Programmer, Dec 2018 - Jan 2019</h5>
 						<p>
 							Alfred is my Makerthon team's RasPi robot, designed to help children with limited mobility
 							move things around their desks.
