--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>CvAngular</title>
   <base href="/">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="lin_logo.ico">
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
